Remove stopAfterCreation
