# http/src/main/scala/org/broadinstitute/dsde/workbench/leonardo/monitor/leoPubsubMessageSubscriberModels.scala
@@ -165,7 +165,6 @@ object LeoPubsubMessage {
                                         welderEnabled: Boolean,
                                         customEnvironmentVariables: Map[String, String],
                                         runtimeConfig: RuntimeConfigInCreateRuntimeMessage,
-                                        stopAfterCreation: Boolean = false,
                                         traceId: Option[TraceId])
       extends LeoPubsubMessage {
     val messageType: LeoPubsubMessageType = LeoPubsubMessageType.CreateRuntime
@@ -190,7 +189,6 @@ object LeoPubsubMessage {
         runtime.welderEnabled,
         runtime.customEnvironmentVariables,
         runtimeConfig,
-        runtime.stopAfterCreation,
         traceId
       )
   }
@@ -503,7 +501,7 @@ object LeoPubsubCodec {
   }
 
   implicit val createRuntimeMessageEncoder: Encoder[CreateRuntimeMessage] =
-    Encoder.forProduct17(
+    Encoder.forProduct16(
       "messageType",
       "id",
       "clusterProjectAndName",
@@ -519,7 +517,6 @@ object LeoPubsubCodec {
       "welderEnabled",
       "customClusterEnvironmentVariables",
       "runtimeConfig",
-      "stopAfterCreation",
       "traceId"
     )(x =>
       (x.messageType,
@@ -537,7 +534,6 @@ object LeoPubsubCodec {
        x.welderEnabled,
        x.customEnvironmentVariables,
        x.runtimeConfig,
-       x.stopAfterCreation,
        x.traceId)
     )
 
@@ -592,7 +588,7 @@ object LeoPubsubCodec {
     }
 
   implicit val createRuntimeMessageDecoder: Decoder[CreateRuntimeMessage] =
-    Decoder.forProduct16(
+    Decoder.forProduct15(
       "id",
       "clusterProjectAndName",
       "serviceAccountInfo",
@@ -607,7 +603,6 @@ object LeoPubsubCodec {
       "welderEnabled",
       "customClusterEnvironmentVariables",
       "runtimeConfig",
-      "stopAfterCreation",
       "traceId"
     )(CreateRuntimeMessage.apply)
 
