# http/src/main/scala/org/broadinstitute/dsde/workbench/leonardo/service/leonardoServiceContractModel.scala
@@ -13,7 +13,6 @@ final case class CreateRuntimeRequest(labels: LabelMap = Map.empty,
                                       jupyterUserScriptUri: Option[UserScriptPath] = None,
                                       jupyterStartUserScriptUri: Option[UserScriptPath] = None,
                                       runtimeConfig: Option[RuntimeConfigRequest] = None,
-                                      stopAfterCreation: Option[Boolean] = None,
                                       allowStop: Boolean = false,
                                       userJupyterExtensionConfig: Option[UserJupyterExtensionConfig] = None,
                                       autopause: Option[Boolean] = None,
@@ -58,7 +57,6 @@ object CreateRuntimeRequest {
       userJupyterExtensionConfig = request.userJupyterExtensionConfig,
       autopauseThreshold = autopauseThreshold,
       defaultClientId = request.defaultClientId,
-      stopAfterCreation = request.stopAfterCreation.getOrElse(false),
       allowStop = request.allowStop,
       runtimeImages = runtimeImages,
       scopes = scopes,
@@ -91,7 +89,6 @@ final case class CreateRuntimeResponse(id: Long,
                                        userJupyterExtensionConfig: Option[UserJupyterExtensionConfig],
                                        autopauseThreshold: Int,
                                        defaultClientId: Option[String],
-                                       stopAfterCreation: Boolean,
                                        clusterImages: Set[RuntimeImage],
                                        scopes: Set[String],
                                        welderEnabled: Boolean,
@@ -120,7 +117,6 @@ object CreateRuntimeResponse {
     runtime.userJupyterExtensionConfig,
     runtime.autopauseThreshold,
     runtime.defaultClientId,
-    runtime.stopAfterCreation,
     runtime.runtimeImages,
     runtime.scopes,
     runtime.welderEnabled,
@@ -145,7 +141,6 @@ final case class ListRuntimeResponse(id: Long,
                                      dataprocInstances: Set[DataprocInstance],
                                      autopauseThreshold: Int,
                                      defaultClientId: Option[String],
-                                     stopAfterCreation: Boolean,
                                      welderEnabled: Boolean,
                                      patchInProgress: Boolean)
 
@@ -168,7 +163,6 @@ object ListRuntimeResponse {
       runtime.dataprocInstances,
       runtime.autopauseThreshold,
       runtime.defaultClientId,
-      runtime.stopAfterCreation,
       runtime.welderEnabled,
       runtime.patchInProgress
     )
@@ -193,7 +187,6 @@ final case class GetRuntimeResponse(id: Long,
                                     userJupyterExtensionConfig: Option[UserJupyterExtensionConfig],
                                     autopauseThreshold: Int,
                                     defaultClientId: Option[String],
-                                    stopAfterCreation: Boolean,
                                     clusterImages: Set[RuntimeImage],
                                     scopes: Set[String],
                                     welderEnabled: Boolean,
@@ -222,7 +215,6 @@ object GetRuntimeResponse {
     runtime.userJupyterExtensionConfig,
     runtime.autopauseThreshold,
     runtime.defaultClientId,
-    runtime.stopAfterCreation,
     runtime.runtimeImages,
     runtime.scopes,
     runtime.welderEnabled,
